Item_list & New Local Storage finished +Pages changed from Ribbon to Request

--- a/src/components/ReQestMenu/ItemMenu.astro
+++ b/src/components/ReQestMenu/ItemMenu.astro
@@ -1,7 +1,7 @@
 <span>
     <div class="menu-container">
         <div id="Ribbon-Listing">
-            <div class="menu-item" data-index="1">
+            <div class="menu-item" data-index="1"> <!-- BTW data-index is the Name that Shows to the User -->
                 <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Ribbon/naval_science_i_outstanding_cadet_ribbon.png"
                     alt="Image 1">
                 <div class="overlay-text">Box 1</div>
