--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -37,7 +37,7 @@ const { title } = Astro.props;
     </header>
     <nav id="Dashboard-Navigation">
         <Link title="Home">Home</Link>
-        <Link title="Ribbon">Ribbons</Link>
+        <Link title="Request">Request</Link>
     </nav>
     <main id="Dashboard-Content">
         <slot></slot>
