--- a/src/pages/Request/index.astro
+++ b/src/pages/Request/index.astro
@@ -3,7 +3,7 @@ import Dashboard from "../../layouts/Dashboard.astro";
 import Home from '../../components/Pages/Ribbon.astro';
 ---
 
-<Dashboard title='Ribbon'>
+<Dashboard title='Request'>
 <Home></Home>
 </Dashboard>
 
