--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -1,5 +1,5 @@
 ---
-import List from '../ReQestMenu/Ribbon_List.astro';
+import List from '../ReQestMenu/Request_List.astro';
 import Menu from '../ReQestMenu/ItemMenu.astro';
 ---
 
