--- a/src/components/SmalCompents/Clock.astro
+++ b/src/components/SmalCompents/Clock.astro
@@ -13,10 +13,11 @@
         top: 50%;
         left: 50%;
         transform: translateX(-50%) translateY(-50%);
-        font-size: 60px;
+        font-size: 22.5px;
         font-family: "Prompt";
         letter-spacing: 7px;
         transition: color 0.5s ease-in-out;
+        text-align: center;
     }
   
   .date {
@@ -85,17 +86,6 @@
   
           setTimeout(showTime, 1000);
             }
-  
-            function adjustFontSize() {
-                const width = window.innerWidth;
-                let fontSize = Math.min(width * 0.013, 60); 
-                document.querySelector('.clock').style.fontSize = `${fontSize}px`;
-                document.querySelector('.date').style.fontSize = `${fontSize}px`;
-            }
-  
-            
-            window.addEventListener('resize', adjustFontSize);
-            window.addEventListener('load', adjustFontSize);
   
   
     showTime();
