--- a/src/components/SmalCompents/DropDown.css
+++ b/src/components/SmalCompents/DropDown.css
@@ -103,7 +103,7 @@
 
   .dropdown-content1 {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: #f1f1f1;
     min-width: 395px;
 
@@ -129,6 +129,7 @@
   .dropdown a:hover {
     background-color: #ddd;
   }
+  
 
   .show {
     display: block;
