--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -35,9 +35,16 @@ const { title } = Astro.props;
             <h1> Cadet <span id="User-Rank">Seaman Recruit</span> <span id="User-Name">Sanchez</span></h1>
             <h3>NS<span id="Class-Name">0</span></h3>
             <Fvfer></Fvfer>
+            <div class="dropdown-content" style="display: none;">
+                <a href="/Dashboard/NewPassword">New Password</a>
+                <a href="#DarkMode" id="darkModeLink">Dark Mode</a>
+                <a href="#">Logout</a>
+            </div>
+            
         </div>
     </header>
     <nav id="Dashboard-Navigation">
+        <br>
         <Link title="Home">Home</Link>
         <hr>
         <Link title="Request">Request</Link>
@@ -48,10 +55,41 @@ const { title } = Astro.props;
     <Setting></Setting>
 </body>
 <style>
-        hr{
+    hr{
         width: 10px;
         margin-right: 156px;
         margin-bottom: 0px;
     }
+    .dropdown-content {
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 400px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #f1f1f1;
+    }
+
 </style>
+<script lang="js">
+    document.addEventListener('DOMContentLoaded', function() {
+        const userInfoDropdownToggle = document.getElementById('User-Info');
+        const dropdownContent = document.querySelector('.dropdown-content');
+    
+        userInfoDropdownToggle.addEventListener('click', function(event) {
+            event.preventDefault();
+            dropdownContent.style.display = dropdownContent.style.display === 'none' ? 'block' : 'none';
+        });
+    });
+    </script>
+    
 </html>
