--- a/src/layouts/Dashboard.css
+++ b/src/layouts/Dashboard.css
@@ -69,7 +69,7 @@ img {
     justify-content: center;
 
     column-gap: 5px;
-    box-shadow: 0px 5px 5px navy;
+    box-shadow: 0 10px 5px navy, 0px -40px 5px #0000a4;
 
     border-bottom: var(--header-border);
     background: var(--top-nav-bg-color);
