--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Box from '../components/Pages/Login.astro';
-import "../components/SmalCompents/Alert.css";
 ---
 
 <Layout title="Login">
-    <div class="alert">
-        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-        <strong><div id="WL"></div></strong> <div id="TW"></div>
-    </div>
-    <span style="border: 10px rgb(0, 0, 0) double;">
+    <span>
         <div id="Login" class="sanchez-regular">
             Login
-            <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg" style="top:170%; position:absolute; width: 80px; height: 80px;">
+            <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg" style="top:130%; position:absolute; width: 80px; height: 80px;">
         </div>
         <form id="The-Login-Form">
             <div class="login-form">
@@ -108,6 +103,8 @@ import "../components/SmalCompents/Alert.css";
             z-index: 99;
             top: 0%;
             width: 30%;
+
+            opacity: 70%;
         }
 
         span {
@@ -125,6 +122,10 @@ import "../components/SmalCompents/Alert.css";
             justify-items: center;
             align-items: start;
             border-radius: 10px;
+
+            box-shadow: 0 0 1rem #0003;
+            background-color: #ffffff26;
+            backdrop-filter: blur(5px);
         }
 
         .login-form {
@@ -142,7 +143,7 @@ import "../components/SmalCompents/Alert.css";
         .input-group input[type="password"] {
             width: 100%;
             height: 40px;
-          outline: none; /* Remove default focus border */
+          outline: none;
         }
 
         .input-text-large {
@@ -151,11 +152,13 @@ import "../components/SmalCompents/Alert.css";
         /* Ensures the custom focus style is visible against the background */
         .input-group input[type="text"],
         .input-group input[type="password"] {
-            background-color: whitesmoke;
+            background: none;
             border: double;
             border-top: none;
             border-left: none;
             border-right: none;
+
+            color: #000;
         }
         .sanchez-regular {
             font-family: "Sanchez", serif;
