--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -38,7 +38,7 @@ const { title } = Astro.props;
             <div class="dropdown-content" style="display: none;">
                 <a href="/Dashboard/NewPassword">New Password</a>
                 <a href="#DarkMode" id="darkModeLink">Dark Mode</a>
-                <a href="#">Logout</a>
+                <a id="Logout">Logout</a>
             </div>
             
         </div>
