--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -145,7 +145,16 @@ import Box from '../components/Pages/Login.astro';
             height: 40px;
           outline: none;
         }
+        .input-group input[type="text"]::placeholder,
+        .input-group input[type="password"]::placeholder {
+        color: rgb(0, 0, 0);
+        opacity: 1; /* Firefox */
+        }
 
+        .input-group input[type="text"]::-ms-input-placeholder,
+        .input-group input[type="password"]::-ms-input-placeholder { /* Edge 12-18 */
+        color: rgb(0, 0, 0);
+        }
         .input-text-large {
             font-size: 24px;
         }
