--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -4,7 +4,6 @@ import Setting from '../components/menu/Setting.astro';
 import Fvfer from '../components/SmalCompents/Line.astro';
 import "./Dashboard.css";
 
-import ViewTransitions from "astro/components/ViewTransitions.astro";
 interface Props {
 	title: string;
 }
@@ -26,7 +25,6 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/c5cddb2fd71a4737ac4ae89491347a84d3608f23/Other/NJROTC-Seal.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>DashBoard | {title}</title>
-        <ViewTransitions/>
 
 </head>
 <body>
@@ -39,8 +37,8 @@ const { title } = Astro.props;
     </div>
     <header id="Dashboard-Header">
         <div id="User-Info">
-            <h1> Cadet <span id="User-Rank">Seaman Recruit</span> <span id="User-Name">Sanchez</span></h1>
-            <h3>NS<span id="Class-Name">0</span></h3>
+            <h1> Cadet <span id="User-rank">Loading Rank...</span> <span id="User-primaryLastName"></span></h1>
+            <h3>NS<span id="User-class">0</span></h3>
             <Fvfer></Fvfer>
             <div class="dropdown-content" style="display: none;">
                 <a href="/Dashboard/NewPassword">New Password</a>
@@ -68,14 +66,57 @@ const { title } = Astro.props;
     <script lang="js">
         console.log("mannn4")
     </script>
-    <script lang="js">
-        console.log("mann5")
-        console.log("amfpoejfipaj")
-        fetch("http://localhost:8080/api/alpha/v1/home/info/general",{
-            method:"GET"
+    <script lang="js" is:inline defer>
+
+        console.log("proof script is running")
+
+        // so if you add "await" to stop execution until it is complete, normally
+        // now the script won't run anyways if you add it
+        // wizard type sheit, i got my phd im shenanigans from hogwards school of detroit
+
+        // edit 2:14a.m. I think something is seriously wrong with this projects
+
+        if(localStorage.getItem("Token") == "" || localStorage.getItem("Token") == null){
+            console.log("not logged in, returing to to login")
+            window.location.href = "/dashboard"
+        }
+        fetch("http://localhost:8080/api/alpha/v1/home/info",{
+            method:"GET",
+            headers:{
+                'Authorization': `Bearer ${localStorage.getItem("Token")}`,
+                'Content-Type': 'application/json',
+            }
+        }).then((res)=>{
+            if(res.status != 200){
+                console.log("an error occured, returning to login")
+                window.location.href = "/dashboard"
+            }
+            console.log("sup")
+            return res.json()
+        }).then(data =>{
+            document.getElementById("User-class").innerText = data.class
+            document.getElementById("User-rank").innerText = data.rank
+            document.getElementById("User-primaryLastName").innerText = data.primaryLastName
+
+
+            /**
+             * this confirms its cursed
+            for(let i in data){
+                console.log(i+":"+data[i])
+                console.log("User-"+i == "User-class") // true at last
+
+                //this changes the text
+                document.getElementById("User-class").innerText = data[i]
+
+                this does not wtf
+                if(document.getElementById("User"+i)){
+                    console.log("Updating: User-"+i)
+                    document.getElementById("User-"+i).innerText = data[i]
+                }
+            }
+             */
         })
     </script>
-    
 </body>
 <style>
     hr{
