--- a/src/pages/Home/index.astro
+++ b/src/pages/Home/index.astro
@@ -20,7 +20,7 @@ import WhiteBoard from "../../components/SmalCompents/Whitebroad.astro"
         <div class="Arrow">V</div>
       </button>
       <div id="clockDropdown" class="dropdown-content1">
-        <Clock />
+        <!-- <Clock /> -->
       </div>
     </div>
   </div>
@@ -32,7 +32,7 @@ import WhiteBoard from "../../components/SmalCompents/Whitebroad.astro"
         <div class="Arrow">V</div>
       </button>
       <div id="whiteboardDropdown" class="dropdown-content1">
-        <WhiteBoard />
+        <!--<WhiteBoard /> -->
       </div>
     </div>
   </div>
@@ -44,7 +44,7 @@ import WhiteBoard from "../../components/SmalCompents/Whitebroad.astro"
         <div class="Arrow">V</div>
       </button>
       <div id="p1Dropdown" class="dropdown-content1">
-        <WhiteBoard />
+        <!--<WhiteBoard /> -->
       </div>
     </div>
   </div>
@@ -56,7 +56,7 @@ import WhiteBoard from "../../components/SmalCompents/Whitebroad.astro"
         <div class="Arrow">V</div>
       </button>
       <div id="p2Dropdown" class="dropdown-content1">
-        <WhiteBoard />
+        <!--<WhiteBoard /> -->
       </div>
     </div>
   </div>
@@ -68,7 +68,7 @@ import WhiteBoard from "../../components/SmalCompents/Whitebroad.astro"
         <div class="Arrow">V</div>
       </button>
       <div id="p3Dropdown" class="dropdown-content1">
-        <WhiteBoard />
+        <!--<WhiteBoard /> -->
       </div>
     </div>
   </div>
@@ -76,7 +76,8 @@ import WhiteBoard from "../../components/SmalCompents/Whitebroad.astro"
 </div> <!-- Part of id="ContentTape" -->
 </Dashboard>
 
-<style>  
+
+<style>
 #ContentTape{
   display: flex;
   justify-content: center; 
